Made the colorpickers look similar to flex colorpickers. Fixed the 1px down displacement issue on hovering the export button. Changed the tab height and removed the white space to left/right.

--- a/ExtensionContent/css/style.css
+++ b/ExtensionContent/css/style.css
@@ -80,7 +80,7 @@ body
 input[type="text"], input[type="password"]
 {
     border: 1px solid #C9CBCC !important;
-    padding: 2px;
+    padding: 1px;
     border-top: 1px solid #6D6F70 !important;
     width: 187px;
     -webkit-user-select: auto;
@@ -180,8 +180,7 @@ input[type="text"], input[type="password"]
             text-align: center;
             float: left;
             width: 54px;
-            height: 38px;
-            padding-top: 4px;
+            height: 40px;
             border-left: 1px solid #B9B9B9;
             border-right: 1px solid #B9B9B9;
             border-top: 1px solid #B9B9B9;
@@ -349,7 +348,7 @@ input[type="text"], input[type="password"]
     border: 2px solid red;
     background-image: none;
     width: 198px;
-    margin-top: -1px;
+    margin-top: -2px;
 }
 
 #tabpage_1 .isOpen:hover
@@ -421,23 +420,30 @@ input[type="text"], input[type="password"]
     color: #4B4B4B;
 }
 
+.expandButton
+{
+	border-left: 1px solid #C9CBCC;
+	border-right: 1px solid #C9CBCC;
+}
+
 .tblCell
 {
-    display: table-cell;
+    display: inline-block;
     vertical-align: middle;
     text-align: left;
 }
 
 #dvExpand
 {
-    width: 120px;
+    width: 110px;
     height: 40px;
 }
 
     #dvExpand img
     {
-        margin-left: 9px;
+        margin-left: 8px;
         width: 42px;
+        height: 32px;
         margin-top: 4px;
     }
 
@@ -657,24 +663,17 @@ label
     -webkit-user-select: auto;
 }
 
-input[type="color"]
+.colorPickerAppearance
 {
+	background: url("../Images/colorPickerImage.png") no-repeat scroll 0 0 transparent;
+    width: 35px !important;
+    height: 20px !important;
+    cursor:pointer;
+    border: 0px transparent !important;
+    background-color: #ff0000;
+    margin-top: -4px;
     -webkit-appearance: none;
-    width: 35px;
-    height:15px; 
-    cursor:pointer; 
-    border: outset 2px #AEAEAE;
 }
-
-    input[type="color"]::-webkit-color-swatch-wrapper
-    {
-        padding: 0px;
-    }
-
-    input[type="color"]::-webkit-color-swatch
-    {
-        border: 3px solid #cccccc;
-    }
 
 #radio
 {
@@ -698,7 +697,7 @@ input[type="color"]
 {
     float: left;
     width: 18px;
-    height: 18px;
+    height: 16px;
     cursor: pointer;
     border: 1px solid #000;
 }
@@ -711,11 +710,11 @@ input[type="color"]
 .tabPage4ContentLeft .colorPicker
 {
     display: none;
-    margin-left: 55px !important;
+    margin-left: 49px !important;
     margin-top: 2px !important;
     padding-left: 4px !important;
     width: 125px;
-    height: 100px;
+    height: 70px;
     border: 1px solid #AEAEAE;
     position: absolute;
     background-image: linear-gradient(to bottom, #E1E1E1 0%, #F8F8F8 20%);
@@ -733,16 +732,17 @@ input[type="color"]
 {
 	float: left;
     width: 28px;
-    height: 18px;
+    height: 16px;
     cursor: pointer;
-    margin-top: 2px !important;
+    margin-top: 1px !important;
     border: 1px #AEAEAE inset;
 }
 
 #canvasExpandSize
 {
-	width: 30px; 
-	height: 20px; 
+	width: 28px; 
+	height: 20px;
+	padding-left: 3px; 
 	font-family: Verdana; 
 	font-size: 11px; 
 	-webkit-user-select: auto;
